feat: add loading screen during app initialization
Display loading indicator while theme mode and locale load from
database. Include error handling with retry functionality and full
localization support.

--- a/lib/src/core/l10n/arb/app_de.arb
+++ b/lib/src/core/l10n/arb/app_de.arb
@@ -25,5 +25,7 @@
   "themeDark": "Dunkel",
   "semanticCellEmpty": "Feld {cellNumber}, leer",
   "semanticCellFilled": "Feld {cellNumber}, gefüllt mit {symbol}",
-  "semanticGameStatus": "Spielstatus"
+  "semanticGameStatus": "Spielstatus",
+  "appInitializationError": "Fehler beim Initialisieren der App",
+  "retry": "Wiederholen"
 }
