refactor: reorganize and consolidate test suite
- Add GameNotifierMixin to eliminate resetGame() duplication - Fix
single-player integration tests to handle computer's random moves -
Consolidate locale switching tests into single comprehensive test - Move
widget tests from two_player to shared location - Improve integration
test robot methods for better reusability

--- a/lib/src/core/l10n/arb/app_de.arb
+++ b/lib/src/core/l10n/arb/app_de.arb
@@ -2,6 +2,7 @@
   "@@locale": "de",
   "appTitle": "Tic Tac Toe",
   "newGame": "Neues Spiel",
+  "singlePlayerGame": "gegen Computer",
   "twoPlayerGame": "Zwei-Spieler-Spiel",
   "playerX": "Spieler X",
   "playerO": "Spieler O",
