feat(i18n): add support for all 24 official EU languages
Add ARB files and translations for 20 additional languages, update
language selector widget, and generate localization files. Machine
translations should be reviewed by professionals before production.

--- a/lib/src/core/l10n/arb/app_da.arb
+++ b/lib/src/core/l10n/arb/app_da.arb
@@ -1,20 +1,20 @@
 {
-  "@@locale": "de",
-  "appTitle": "Tic Tac Toe",
-  "newGame": "Neues Spiel",
-  "singlePlayerGame": "gegen Computer",
-  "twoPlayerGame": "Zwei-Spieler-Spiel",
-  "playerX": "Spieler X",
-  "playerO": "Spieler O",
-  "playerTurn": "{player} ist dran",
-  "playerXWins": "Spieler X Gewinnt!",
-  "playerOWins": "Spieler O Gewinnt!",
-  "draw": "Unentschieden!",
-  "gameEndedDraw": "Das Spiel endete unentschieden!",
-  "playerWonGame": "{player} hat das Spiel gewonnen!",
-  "resetGame": "Zurücksetzen",
-  "playAgain": "Nochmal Spielen",
-  "language": "Sprache",
+  "@@locale": "da",
+  "appTitle": "Kryds og Bolle",
+  "newGame": "Nyt spil",
+  "singlePlayerGame": "mod computer",
+  "twoPlayerGame": "Spil for to spillere",
+  "playerX": "Spiller X",
+  "playerO": "Spiller O",
+  "playerTurn": "{player}s tur",
+  "playerXWins": "Spiller X vinder!",
+  "playerOWins": "Spiller O vinder!",
+  "draw": "Det er uafgjort!",
+  "gameEndedDraw": "Spillet endte uafgjort!",
+  "playerWonGame": "{player} har vundet spillet!",
+  "resetGame": "Nulstil spil",
+  "playAgain": "Spil igen",
+  "language": "Sprog",
   "languageEnglish": "English",
   "languageFrench": "Français",
   "languageSpanish": "Español",
@@ -40,13 +40,13 @@
   "languageSlovene": "Slovenščina",
   "languageSwedish": "Svenska",
   "languageSystemDefault": "Systemstandard",
-  "theme": "Design",
+  "theme": "Tema",
   "themeSystemDefault": "Systemstandard",
-  "themeLight": "Hell",
-  "themeDark": "Dunkel",
-  "semanticCellEmpty": "Feld {cellNumber}, leer",
-  "semanticCellFilled": "Feld {cellNumber}, gefüllt mit {symbol}",
-  "semanticGameStatus": "Spielstatus",
-  "appInitializationError": "Fehler beim Initialisieren der App",
-  "retry": "Wiederholen"
+  "themeLight": "Lys",
+  "themeDark": "Mørk",
+  "semanticCellEmpty": "Celle {cellNumber}, tom",
+  "semanticCellFilled": "Celle {cellNumber}, udfyldt med {symbol}",
+  "semanticGameStatus": "Spilstatus",
+  "appInitializationError": "Kunne ikke initialisere app",
+  "retry": "Prøv igen"
 }
