--- a/lib/src/core/l10n/arb/app_fr.arb
+++ b/lib/src/core/l10n/arb/app_fr.arb
@@ -19,6 +19,26 @@
   "languageFrench": "Français",
   "languageSpanish": "Español",
   "languageGerman": "Deutsch",
+  "languageBulgarian": "Български",
+  "languageCroatian": "Hrvatski",
+  "languageCzech": "Čeština",
+  "languageDanish": "Dansk",
+  "languageDutch": "Nederlands",
+  "languageEstonian": "Eesti",
+  "languageFinnish": "Suomi",
+  "languageGreek": "Ελληνικά",
+  "languageHungarian": "Magyar",
+  "languageIrish": "Gaeilge",
+  "languageItalian": "Italiano",
+  "languageLatvian": "Latviešu",
+  "languageLithuanian": "Lietuvių",
+  "languageMaltese": "Malti",
+  "languagePolish": "Polski",
+  "languagePortuguese": "Português",
+  "languageRomanian": "Română",
+  "languageSlovak": "Slovenčina",
+  "languageSlovene": "Slovenščina",
+  "languageSwedish": "Svenska",
   "languageSystemDefault": "Par Défaut",
   "theme": "Thème",
   "themeSystemDefault": "Par Défaut",
