--- a/lib/src/core/l10n/arb/app_sv.arb
+++ b/lib/src/core/l10n/arb/app_sv.arb
@@ -1,20 +1,20 @@
 {
-  "@@locale": "de",
-  "appTitle": "Tic Tac Toe",
-  "newGame": "Neues Spiel",
-  "singlePlayerGame": "gegen Computer",
-  "twoPlayerGame": "Zwei-Spieler-Spiel",
-  "playerX": "Spieler X",
-  "playerO": "Spieler O",
-  "playerTurn": "{player} ist dran",
-  "playerXWins": "Spieler X Gewinnt!",
-  "playerOWins": "Spieler O Gewinnt!",
-  "draw": "Unentschieden!",
-  "gameEndedDraw": "Das Spiel endete unentschieden!",
-  "playerWonGame": "{player} hat das Spiel gewonnen!",
-  "resetGame": "Zurücksetzen",
-  "playAgain": "Nochmal Spielen",
-  "language": "Sprache",
+  "@@locale": "sv",
+  "appTitle": "Tre i rad",
+  "newGame": "Nytt spel",
+  "singlePlayerGame": "mot datorn",
+  "twoPlayerGame": "Spel för två spelare",
+  "playerX": "Spelare X",
+  "playerO": "Spelare O",
+  "playerTurn": "{player}s tur",
+  "playerXWins": "Spelare X vinner!",
+  "playerOWins": "Spelare O vinner!",
+  "draw": "Oavgjort!",
+  "gameEndedDraw": "Spelet slutade oavgjort!",
+  "playerWonGame": "{player} har vunnit spelet!",
+  "resetGame": "Återställ spel",
+  "playAgain": "Spela igen",
+  "language": "Språk",
   "languageEnglish": "English",
   "languageFrench": "Français",
   "languageSpanish": "Español",
@@ -40,13 +40,13 @@
   "languageSlovene": "Slovenščina",
   "languageSwedish": "Svenska",
   "languageSystemDefault": "Systemstandard",
-  "theme": "Design",
+  "theme": "Tema",
   "themeSystemDefault": "Systemstandard",
-  "themeLight": "Hell",
-  "themeDark": "Dunkel",
-  "semanticCellEmpty": "Feld {cellNumber}, leer",
-  "semanticCellFilled": "Feld {cellNumber}, gefüllt mit {symbol}",
-  "semanticGameStatus": "Spielstatus",
-  "appInitializationError": "Fehler beim Initialisieren der App",
-  "retry": "Wiederholen"
+  "themeLight": "Ljust",
+  "themeDark": "Mörkt",
+  "semanticCellEmpty": "Cell {cellNumber}, tom",
+  "semanticCellFilled": "Cell {cellNumber}, fylld med {symbol}",
+  "semanticGameStatus": "Spelstatus",
+  "appInitializationError": "Kunde inte initiera appen",
+  "retry": "Försök igen"
 }
