feat(app_update): add service worker update detection with notification
- Detect new app versions via service worker in pure Dart - Show
SnackBar with refresh button when update available - Add i18n support
for all 24 EU languages - Use modern package:web APIs (no JavaScript
required)

--- a/lib/src/core/l10n/arb/app_bg.arb
+++ b/lib/src/core/l10n/arb/app_bg.arb
@@ -48,5 +48,7 @@
   "semanticCellFilled": "Клетка {cellNumber}, запълнена с {symbol}",
   "semanticGameStatus": "Състояние на играта",
   "appInitializationError": "Неуспешна инициализация на приложението",
-  "retry": "Опитай отново"
+  "retry": "Опитай отново",
+  "appUpdateAvailable": "Налична е нова версия",
+  "appUpdateRefresh": "Обнови"
 }
