--- a/lib/src/core/l10n/arb/app_el.arb
+++ b/lib/src/core/l10n/arb/app_el.arb
@@ -48,5 +48,7 @@
   "semanticCellFilled": "Κελί {cellNumber}, γεμισμένο με {symbol}",
   "semanticGameStatus": "Κατάσταση παιχνιδιού",
   "appInitializationError": "Αποτυχία αρχικοποίησης εφαρμογής",
-  "retry": "Δοκίμασε ξανά"
+  "retry": "Δοκίμασε ξανά",
+  "appUpdateAvailable": "Διατίθεται νέα έκδοση",
+  "appUpdateRefresh": "Ανανέωση"
 }
