--- a/lib/src/core/l10n/arb/app_it.arb
+++ b/lib/src/core/l10n/arb/app_it.arb
@@ -48,5 +48,7 @@
   "semanticCellFilled": "Cella {cellNumber}, riempita con {symbol}",
   "semanticGameStatus": "Stato della partita",
   "appInitializationError": "Impossibile inizializzare l'app",
-  "retry": "Riprova"
+  "retry": "Riprova",
+  "appUpdateAvailable": "È disponibile una nuova versione",
+  "appUpdateRefresh": "Aggiorna"
 }
